[gd_scene load_steps=16 format=3 uid="uid://d18xqalhdelet"]

[ext_resource type="Texture2D" uid="uid://c46klpgvkexe0" path="res://Assets/p2assets/l3s1u.png" id="1_8i4as"]
[ext_resource type="Script" uid="uid://bva7k5ff8pir4" path="res://Scripts/L3S1.gd" id="1_h7d3c"]
[ext_resource type="Texture2D" uid="uid://capgx0elih2gq" path="res://Assets/p2assets/l3s1l.png" id="2_da6qw"]
[ext_resource type="Texture2D" uid="uid://1pwfrsus1raa" path="res://Assets/p2assets/topIron.png" id="2_xm76m"]
[ext_resource type="Texture2D" uid="uid://df2tjo8b34c0f" path="res://Assets/p2assets/cells.png" id="3_3w7wf"]
[ext_resource type="Texture2D" uid="uid://dq6sdxgquotlh" path="res://Assets/p2assets/box2.png" id="4_grwhk"]
[ext_resource type="Script" uid="uid://egx2pdcrmifc" path="res://Scripts/hidding_spot.gd" id="5_3w7wf"]
[ext_resource type="Texture2D" uid="uid://b74wkosyvehnh" path="res://Assets/p2assets/Stell.png" id="5_5ycl0"]
[ext_resource type="Texture2D" uid="uid://dobtpl5u36p51" path="res://Assets/p2assets/box1.png" id="7_h7d3c"]
[ext_resource type="PackedScene" uid="uid://jb53427i3iba" path="res://Scenes/gaurd.tscn" id="9_grwhk"]
[ext_resource type="PackedScene" uid="uid://db2rs245n3142" path="res://Scenes/Demoplayer.tscn" id="10_5ycl0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xm76m"]
size = Vector2(1924, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3w7wf"]
size = Vector2(1924, 97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ycl0"]
size = Vector2(69, 537)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7d3c"]
size = Vector2(55, 348)

[node name="L3S1" type="Node2D"]
script = ExtResource("1_h7d3c")

[node name="L3s1u" type="Sprite2D" parent="."]
position = Vector2(961, 489)
texture = ExtResource("1_8i4as")

[node name="TopIron" type="Sprite2D" parent="L3s1u"]
position = Vector2(-21, -403)
texture = ExtResource("2_xm76m")

[node name="Cells" type="Sprite2D" parent="L3s1u"]
position = Vector2(-6, -127)
texture = ExtResource("3_3w7wf")

[node name="floorup" type="StaticBody2D" parent="L3s1u"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="L3s1u/floorup"]
position = Vector2(-1, 64)
shape = SubResource("RectangleShape2D_xm76m")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="L3s1u/floorup"]
position = Vector2(-2, 546)
shape = SubResource("RectangleShape2D_3w7wf")

[node name="Box2" type="Sprite2D" parent="L3s1u"]
position = Vector2(44, -26)
texture = ExtResource("4_grwhk")

[node name="Hidding spot" type="Area2D" parent="L3s1u/Box2" groups=["top_floor"]]
position = Vector2(-1005, -463)
script = ExtResource("5_3w7wf")
top_floor_guard = NodePath("../../Gaurd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="L3s1u/Box2/Hidding spot"]
polygon = PackedVector2Array(911, 399, 1097, 397, 1095, 522, 913, 524)

[node name="GuardLeaveTimer" type="Timer" parent="L3s1u/Box2"]

[node name="Cells2" type="Sprite2D" parent="L3s1u"]
position = Vector2(-4, 332)
texture = ExtResource("3_3w7wf")

[node name="Gaurd" parent="L3s1u" node_paths=PackedStringArray("detection_area") groups=["top_floor"] instance=ExtResource("9_grwhk")]
position = Vector2(-863, -44)
detection_area = NodePath("../Box2/Hidding spot")

[node name="Player" parent="L3s1u" instance=ExtResource("10_5ycl0")]
position = Vector2(847, -22)

[node name="Stell" type="Sprite2D" parent="L3s1u"]
position = Vector2(1, -18)
texture = ExtResource("5_5ycl0")

[node name="L3s1l" type="Sprite2D" parent="L3s1u"]
position = Vector2(-1, 541)
texture = ExtResource("2_da6qw")

[node name="Box1" type="Sprite2D" parent="L3s1u"]
position = Vector2(-406, 429)
texture = ExtResource("7_h7d3c")

[node name="PlayerPositionChanger" type="Area2D" parent="L3s1u"]
position = Vector2(-961, -489)

[node name="CollisionShape2D" type="CollisionShape2D" parent="L3s1u/PlayerPositionChanger"]
position = Vector2(24.5, 258.5)
shape = SubResource("RectangleShape2D_5ycl0")

[node name="next_scene" type="Area2D" parent="."]
position = Vector2(1767, 921)

[node name="ColorRect" type="ColorRect" parent="next_scene"]
offset_left = 118.0
offset_top = -58.0
offset_right = 134.0
offset_bottom = -39.0
color = Color(0.760998, 0.304838, 0.191818, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_scene"]
position = Vector2(119.5, -114)
shape = SubResource("RectangleShape2D_h7d3c")

[connection signal="body_entered" from="L3s1u/Box2/Hidding spot" to="L3s1u/Box2/Hidding spot" method="_on_body_entered"]
[connection signal="body_exited" from="L3s1u/Box2/Hidding spot" to="L3s1u/Box2/Hidding spot" method="_on_body_exited"]
[connection signal="body_entered" from="L3s1u/PlayerPositionChanger" to="L3s1u/Box2/Hidding spot" method="_on_player_position_changer_body_entered"]
[connection signal="body_entered" from="next_scene" to="." method="_on_next_scene_body_entered"]

[editable path="L3s1u/Gaurd"]
